--- a/.github/workflows/reorder.yml
+++ b/.github/workflows/reorder.yml
@@ -1,7 +1,7 @@
 name: "Reorder channels"
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "main" ]
 jobs:
   build:
     runs-on: ubuntu-latest
