Allow it to be manually triggered (for testing)

--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -3,6 +3,7 @@ name: Auto Update
 on:
   schedule:
     - cron: '0 1 * * 1'  # Runs at 01:00 AM every Monday
+  workflow_dispatch:
 
 jobs:
   build:
