--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -38,5 +38,5 @@ jobs:
   
       - name: Create PR
         env:
-          GH_TOKEN: ${{ github.token }}
+          GH_TOKEN: ${{ env.GH_TOKEN }}
         run: gh pr create --base main --head ${{ env.BRANCH_NAME }} --title "[AUTO] Update stats" --body "_This PR includes automated changes._"
