--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
   
       - name: Setup Git
         run: |
