--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -39,7 +39,7 @@ jobs:
         run: |
           git add .
           git commit -m "Update stats" || echo "No changes to commit"
-          git push origin ${{ env.BRANCH_NAME }}
+          git push -f origin ${{ env.BRANCH_NAME }}
 
   
       - name: Create PR
