--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -39,10 +39,10 @@ jobs:
         run: |
           git add .
           git commit -m "Update stats" || echo "No changes to commit"
-          git push -f origin ${{ env.BRANCH_NAME }}
+          git push origin ${{ env.BRANCH_NAME }}
 
   
       - name: Create PR
         env:
-          GH_TOKEN: ${{ github.token }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: gh pr create --base main --head ${{ env.BRANCH_NAME }} --title "[AUTO] Update stats" --body "_This PR includes automated changes._"
